--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <view
+    <io.zenandroid.onlinego.views.Board
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        class="info.mralex.onlinego.views.Board"
         android:id="@+id/board"
         android:layout_centerHorizontal="true" />
 
