--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,24 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="LoginLabel">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">#CCCCCC</item>
+        <item name="android:textSize">20sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/white</item>
+        <item name="colorControlNormal">#CCCCCC</item>
+        <item name="colorControlActivated">@color/white</item>
+
+    </style>
+
+    <style name="BlueButton" parent="ThemeOverlay.AppCompat">
+        <!--<item name="colorAccent">#303F9F</item>-->
+        <item name="colorAccent">@color/colorPrimaryDark</item>
+    </style>
 </resources>
