--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="56dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    >
+    android:background="@color/colorPrimary">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/online_go_prerender"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="56dp"
+        />
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        android:theme="@style/LoginLabel"
+        >
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="username"
+            android:hint="User"
+            android:textColor="@color/white"
             />
     </android.support.design.widget.TextInputLayout>
 
@@ -26,13 +37,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        android:theme="@style/LoginLabel"
+        >
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="password"
+            android:hint="Password"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
             />
     </android.support.design.widget.TextInputLayout>
 
@@ -44,7 +60,8 @@
         android:layout_marginBottom="24dp"
         android:padding="12dp"
         android:text="Login"
-        android:textColor="#FFFFFF"
+        android:theme="@style/BlueButton"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:enabled="false"
         />
 </LinearLayout>
