--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <io.zenandroid.onlinego.views.Board
+    <io.zenandroid.onlinego.views.BoardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/board"
