--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,7 @@
         app:itemIconTint="@drawable/navigation_selector_color"
         app:itemTextColor="@drawable/navigation_selector_color"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:elevation="8dp"
+        android:elevation="8dp"
         app:menu="@menu/menu_main" />
 </android.support.constraint.ConstraintLayout>
