--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,11 @@
 
     <style name="LoginLabel">
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#CCCCCC</item>
+        <item name="android:textColorHint">#99FFFFFF</item>
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@color/white</item>
-        <item name="colorControlNormal">#CCCCCC</item>
+        <item name="colorControlNormal">#99FFFFFF</item>
         <item name="colorControlActivated">@color/white</item>
 
     </style>
@@ -22,5 +22,9 @@
     <style name="BlueButton" parent="ThemeOverlay.AppCompat">
         <!--<item name="colorAccent">#303F9F</item>-->
         <item name="colorAccent">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="LoginActivity" parent="AppTheme">
+        <item name="android:windowBackground">@color/loginBackground</item>
     </style>
 </resources>
