--- a/app/src/main/res/layout/game_card.xml
+++ b/app/src/main/res/layout/game_card.xml
@@ -1,19 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="4dp"
-    android:layout_margin="10dp"
     app:cardElevation="2dp"
     >
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+
         <io.zenandroid.onlinego.views.BoardView
             android:id="@+id/board"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/black_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/gradient_black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/board" />
+
+        <TextView
+            android:id="@+id/black_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Player 1"
+            app:layout_constraintBottom_toBottomOf="@+id/black_icon"
+            app:layout_constraintStart_toEndOf="@+id/black_icon"
+            app:layout_constraintTop_toTopOf="@+id/black_icon" />
+
+        <TextView
+            android:id="@+id/black_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="14k"
+            app:layout_constraintStart_toEndOf="@+id/black_name"
+            app:layout_constraintTop_toTopOf="@+id/black_name" />
+
+        <View
+            android:id="@+id/white_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/gradient_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/black_icon" />
+
+        <TextView
+            android:id="@+id/white_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="13k"
+            app:layout_constraintBottom_toBottomOf="@+id/white_icon"
+            app:layout_constraintEnd_toStartOf="@+id/white_icon"
+            app:layout_constraintTop_toTopOf="@+id/white_icon" />
+
+        <TextView
+            android:id="@+id/white_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Player 2"
+            app:layout_constraintEnd_toStartOf="@+id/white_rank"
+            app:layout_constraintTop_toTopOf="@+id/white_rank" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
