--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white">#FFFFFF</color>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryLight">#B2DFDB</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#FF5722</color>
+    <!--<color name="white">#FFFFFF</color>-->
+    <!--<color name="colorPrimary">#009688</color>-->
+    <!--<color name="colorPrimaryLight">#B2DFDB</color>-->
+    <!--<color name="colorPrimaryDark">#00796B</color>-->
+    <!--<color name="colorAccent">#FF5722</color>-->
 
     <color name="colorText">#212121</color>
     <color name="colorTextSecondary">#757575</color>
 
     <color name="loginBackground">@color/colorPrimary</color>
 
+    <color name="white">#FFFFFF</color>
+    <color name="colorPrimary">#77BAE6</color>
+    <color name="colorPrimaryDark">#2588c9</color>
+    <color name="colorAccent">#F78686</color>
+    <color name="colorOffWhite">#F2F7FF</color>
+
+    <!--<color name="white">#FFFFFF</color>-->
+    <!--<color name="colorPrimary">#7AC795</color>-->
+    <!--<color name="colorPrimaryLight">#8DDCAD</color>-->
+    <!--<color name="colorPrimaryDark">#559E72</color>-->
+    <!--<color name="colorAccent">#F78686</color>-->
+    <!--<color name="colorOffWhite">#F2FFF7</color>-->
 </resources>
