--- a/app/src/main/res/layout/game_card.xml
+++ b/app/src/main/res/layout/game_card.xml
@@ -34,6 +34,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="-5dp"
         android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="@color/colorPrimary"
         >
 
         <android.support.constraint.ConstraintLayout
@@ -51,7 +52,9 @@
                 android:maxLines="1"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="#444444"
+                android:textColor="#FFFFFF"
+                android:shadowRadius="3"
+                android:shadowColor="@color/colorPrimaryDark"
                 app:layout_constraintBaseline_toBaselineOf="@+id/white_name"
                 app:layout_constraintEnd_toStartOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/black_rank"
@@ -65,7 +68,7 @@
                 android:text="14k"
                 android:textSize="12sp"
                 android:textStyle="italic"
-                android:textColor="#444444"
+                android:textColor="#FFFFFF"
                 app:layout_constraintBaseline_toBaselineOf="@+id/black_name"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -77,7 +80,7 @@
                 android:text="13k"
                 android:textSize="12sp"
                 android:textStyle="italic"
-                android:textColor="#444444"
+                android:textColor="#FFFFFF"
                 app:layout_constraintBaseline_toBaselineOf="@+id/white_name"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -91,7 +94,9 @@
                 android:maxLines="1"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="#444444"
+                android:textColor="#FFFFFF"
+                android:shadowRadius="3"
+                android:shadowColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toStartOf="@+id/white_rank"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent"
