Add ability to pass and resign

--- a/app/src/main/res/drawable/button_shape_default_rounded.xml
+++ b/app/src/main/res/drawable/button_shape_default_rounded.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" android:state_selected="false">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="@color/white"
+    tools:targetApi="lollipop">
+
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
             <corners android:radius="50dp" />
-            <solid android:color="#FFFFFF" />
         </shape>
     </item>
-</selector>
+</ripple>
