--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,160 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/board_card"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp"
+        app:layout_constraintBottom_toBottomOf="@id/white_details"
+        app:layout_constraintLeft_toLeftOf="@id/black_details"
+        app:layout_constraintRight_toRightOf="@id/black_details"
+        app:layout_constraintTop_toTopOf="@id/black_details"
+        />
+
+    <io.zenandroid.onlinego.views.PlayerDetailsView
+        android:id="@+id/black_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="3dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toTopOf="@id/board_container"
+        />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/board_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toTopOf="@id/active_game_controls"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="parent">
 
         <io.zenandroid.onlinego.views.BoardView
             android:id="@+id/board"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/players_card"
+    <io.zenandroid.onlinego.views.PlayerDetailsView
+        android:id="@+id/white_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="-5dp"
-        app:cardCornerRadius="3dp"
-        app:cardElevation="2dp">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:id="@+id/black_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:ellipsize="end"
-                android:gravity="right"
-                android:maxLines="1"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBaseline_toBaselineOf="@+id/white_name"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
-                app:layout_constraintStart_toEndOf="@+id/black_rank"
-                tools:text="Lorem" />
-
-            <TextView
-                android:id="@+id/black_rank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="14k"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                app:layout_constraintBaseline_toBaselineOf="@+id/black_name"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/white_rank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="13k"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                app:layout_constraintBaseline_toBaselineOf="@+id/white_name"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <TextView
-                android:id="@+id/white_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/white_rank"
-                app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Lorem ipsum dolor sit amet 2" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="14dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/stone_black" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/stone_white" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:elevation="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/board_container"
+        />
 
     <LinearLayout
         android:id="@+id/active_game_controls"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="40dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white"
+        android:elevation="4dp"
         >
 
-        <Button
-            android:id="@+id/pass_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Pass"
-            android:background="@drawable/button_shape_default_rounded"
-            android:layout_marginLeft="10dp"
-            android:backgroundTint="@color/selectable_primary"
-            android:textColor="#FFFFFF"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="5dp"
-            />
-
-        <Button
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/resign_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_flag"
             android:layout_weight="1"
-            android:text="Resign"
-            android:gravity="center"
-            android:background="@drawable/button_shape_default_rounded"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/selectable_primary"
-            android:textColor="#FFFFFF"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
             />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/pass_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_undo"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            />
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_chat_bubble"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            />
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_navigate_previous"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            />
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_navigate_next"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            />
+
     </LinearLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
