Improve game screen layout for long player names

--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon"
@@ -18,42 +18,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.text.emoji.widget.EmojiAppCompatTextView
-        android:id="@+id/flag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/name"
-        app:layout_constraintLeft_toRightOf="@id/rank"
-        app:layout_constraintTop_toTopOf="@+id/name"
-        tools:text="flg" />
-
-    <TextView
-        android:id="@+id/name"
+    <LinearLayout
+        android:id="@+id/first_row"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:ellipsize="end"
-        android:fontFamily="@font/kanit_semibold"
         android:gravity="right"
-        android:maxLines="1"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/icon"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="MrAlex"
-        />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintLeft_toRightOf="@id/icon"
+        app:layout_constraintRight_toRightOf="parent">
 
-    <TextView
-        android:id="@+id/rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/kanit"
-        android:text="(14k)"
-        android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/name"
-        app:layout_constraintStart_toEndOf="@+id/name" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/kanit_semibold"
+            android:gravity="left"
+            android:maxLines="1"
+            android:textSize="18sp"
+            tools:text="MrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlex" />
+
+        <TextView
+            android:id="@+id/rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/kanit"
+            tools:text="(14k)"
+            android:textSize="12sp" />
+
+        <android.support.text.emoji.widget.EmojiAppCompatTextView
+            android:id="@+id/flag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:textSize="18sp"
+            tools:text="flg" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/score"
@@ -61,6 +66,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/kanit"
         android:text="3 capture + 7.5 komi"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        app:layout_constraintLeft_toLeftOf="@id/first_row"
+        app:layout_constraintTop_toBottomOf="@id/first_row"
+        />
+
 </android.support.constraint.ConstraintLayout>
