--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -5,18 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/icon"
+    <android.support.v7.widget.CardView
+        android:id="@+id/icon_container"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@mipmap/stone_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="2dp"
+        >
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_person_outline"
+            />
+    </android.support.v7.widget.CardView>
+
 
     <LinearLayout
         android:id="@+id/first_row"
@@ -26,7 +37,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintWidth_default="wrap"
-        app:layout_constraintLeft_toRightOf="@id/icon"
+        app:layout_constraintLeft_toRightOf="@id/icon_container"
         app:layout_constraintRight_toRightOf="parent">
 
         <TextView
@@ -65,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/kanit"
-        android:text="3 capture + 7.5 komi"
+        tools:text="3 captured + 7.5 komi"
         app:layout_constraintLeft_toLeftOf="@id/first_row"
         app:layout_constraintTop_toBottomOf="@id/first_row"
         />
