--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -101,6 +101,8 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:background="?selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
             />
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/next_button"
@@ -112,6 +114,33 @@
             android:paddingBottom="10dp"
             android:background="?selectableItemBackground"
             />
-
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/discard_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_cancel"
+            app:tint="#000000"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
+            />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/confirm_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_done_24dp"
+            app:tint="#000000"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
+            />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
