Implement FINISHED game state

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -133,11 +133,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_done_24dp"
-            app:tint="#000000"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:background="?selectableItemBackground"
+            android:background="#FFAB40"
             android:visibility="gone"
             android:clickable="true"
             android:focusable="true"
