--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -49,7 +49,7 @@
             android:gravity="left"
             android:maxLines="1"
             android:textSize="18sp"
-            tools:text="MrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlexMrAlex" />
+            tools:text="MrAlex" />
 
         <TextView
             android:id="@+id/rank"
