Finished implementing ability to view history. Bugfixes.

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -87,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_chat_bubble"
+            app:tint="@color/disable_black"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -97,6 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_navigate_previous"
+            app:tint="@color/disable_black"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -109,6 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_navigate_next"
+            app:tint="@color/disable_black"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
