--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:titleTextColor="#FFFFFF"
+            app:subtitleTextColor="#FFFFFF"
             >
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
