Implement simple versioning and remove obsolete texture

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/loginBackground"
     android:id="@+id/container"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/logo"
@@ -77,4 +77,12 @@
         android:enabled="false"
         android:visibility="gone"
     />
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        tools:text="v0.0.0"
+        android:textColor="@color/colorPrimaryLight"
+        />
 </LinearLayout>
