Implement FAB animation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,9 +65,36 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appbar" >
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        />
 
-    </FrameLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemIconTint="@drawable/navigation_selector_color"
+        app:itemTextColor="@drawable/navigation_selector_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:elevation="4dp"
+        app:menu="@menu/menu_main"
+        android:background="@color/white"
+        />
+
+    <View
+        android:id="@+id/fade_out_mask"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_container"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintLeft_toLeftOf="@id/fragment_container"
+        app:layout_constraintRight_toRightOf="@id/fragment_container"
+        android:alpha=".85"
+        android:visibility="gone"
+        android:background="#FFFFFF"
+        android:elevation="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -83,15 +110,88 @@
         app:backgroundTint="@color/colorPrimary"
         />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/correspondence_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/navigation_selector_color"
-        app:itemTextColor="@drawable/navigation_selector_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:elevation="10dp"
-        app:menu="@menu/menu_main"
-        android:background="@color/white"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_turtle"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/correspondence_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Correspondence"
+        app:layout_constraintRight_toLeftOf="@id/correspondence_fab"
+        app:layout_constraintTop_toTopOf="@id/correspondence_fab"
+        app:layout_constraintBottom_toBottomOf="@id/correspondence_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/normal_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/correspondence_fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_clock"
+        android:tint="@color/white"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/normal_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Normal"
+        app:layout_constraintRight_toLeftOf="@id/normal_fab"
+        app:layout_constraintTop_toTopOf="@id/normal_fab"
+        app:layout_constraintBottom_toBottomOf="@id/normal_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/blitz_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/normal_fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_blitz"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/blitz_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blitz"
+        app:layout_constraintRight_toLeftOf="@id/blitz_fab"
+        app:layout_constraintTop_toTopOf="@id/blitz_fab"
+        app:layout_constraintBottom_toBottomOf="@id/blitz_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
         />
 </android.support.constraint.ConstraintLayout>
