Implement second step of the FAB menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -194,4 +194,88 @@
         android:layout_marginRight="16dp"
         android:fontFamily="@font/kanit_semibold"
         />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/large_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_l"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/large_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="19x19"
+        app:layout_constraintRight_toLeftOf="@id/large_fab"
+        app:layout_constraintTop_toTopOf="@id/large_fab"
+        app:layout_constraintBottom_toBottomOf="@id/large_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/medium_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/large_fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_m"
+        android:tint="@color/white"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/medium_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="13x13"
+        app:layout_constraintRight_toLeftOf="@id/medium_fab"
+        app:layout_constraintTop_toTopOf="@id/medium_fab"
+        app:layout_constraintBottom_toBottomOf="@id/medium_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/small_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/medium_fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_s"
+        app:fabSize="mini"
+        app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/small_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="9x9"
+        app:layout_constraintRight_toLeftOf="@id/small_fab"
+        app:layout_constraintTop_toTopOf="@id/small_fab"
+        app:layout_constraintBottom_toBottomOf="@id/small_fab"
+        android:alpha="0"
+        android:elevation="6dp"
+        android:layout_marginRight="16dp"
+        android:fontFamily="@font/kanit_semibold"
+        />
 </android.support.constraint.ConstraintLayout>
